removing default from the list of available styles - it is included by "default"; removing width from the table.td.data style to prevent wrapping of the text

--- a/etc/CIF/styles/default.css
+++ b/etc/CIF/styles/default.css
@@ -64,7 +64,6 @@ table.CifTable
 
 table.CifTable td.data
   {
-    width:3em;
     white-space:nowrap;
   }
 
